Completed gradle t2b run configuration.