@@ -36,6 +36,7 @@ dependencies {
     testCompile 'org.testng:testng:7.4.0'
     testCompile 'junit:junit:4.13.2'
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
     t2b 'com.gocypher.cybench:cybench-t2b-agent:1.0-SNAPSHOT'
     cybench 'com.gocypher.cybench.client:gocypher-cybench-runner:1.2-SNAPSHOT'
 }
@@ -72,9 +73,9 @@ jar {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = project.property('group')
-            artifactId = project.property('archivesBaseName')
-            version = project.property('version')
+            groupId = "$group"
+            artifactId = "$archivesBaseName"
+            version = "$version"
 
             from components.java
         }
@@ -85,19 +86,67 @@ publishing {
 //
 //}
 
+allprojects {
+    tasks.withType(JavaExec) {
+        doFirst {
+            println commandLine
+        }
+    }
+}
+
 task buildBenchmarksFromUnitTests(type: JavaExec) {
     group = 'CyBench-T2B'
     description = 'Run Test2Benchmarks benchmarks generator'
-    classpath = sourceSets.main.runtimeClasspath
-    main = 'com.gocypher.cybench.Test2Benchmark'
-    allJvmArgs = ['-javaagent:' + configurations.t2b.asPath,
-                  //'-Dt2b.buildDir=' + buildDir.toPath ().toString (),
-                  '-Dt2b.jdkHome=d:/java/jdk180']
-
-    debugOptions {
-        enabled = false
-        port = 5005
-        server = true
-        suspend = true
+    classpath = files(
+            project.sourceSets.main.runtimeClasspath,
+            project.sourceSets.test.runtimeClasspath,
+            configurations.t2b
+    )
+    if (JavaVersion.current().isJava9Compatible()) {
+        jvmArgs = [
+                "-javaagent: \"${configurations.t2b.iterator().next()}\"",
+                '--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED',
+                '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED'
+        ]
+    } else {
+        jvmArgs = [
+                "-javaagent:\"${configurations.t2b.iterator().next()}\""
+        ]
     }
+    systemProperties = [
+            't2b.buildDir': "$buildDir",
+            't2b.jdkHome' : 'd:/java/jdk180'
+    ]
+    main = 'com.gocypher.cybench.Test2Benchmark'
+}
+
+
+task runBenchmarksFromUnitTestsCybench(type: JavaExec) {
+    def benchRunProps = new Properties()
+    file(".benchRunProps").withInputStream { benchRunProps.load(it) }
+
+    group = 'CyBench-T2B'
+    description = 'Run JMH benchmarks over Cybench Launcher runner'
+    classpath = files(
+            [benchRunProps.get('RUN_CLASS_PATH').replaceAll("\"", "")],
+            configurations.cybench
+    )
+    if (JavaVersion.current().isJava9Compatible()) {
+        jvmArgs = [
+                '--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED',
+                '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED'
+        ]
+    }
+
+    //    ### Config for CyBench Launcher runner ###
+    main = 'com.gocypher.cybench.launcher.BenchmarkRunner'
+    args = [
+            'cfg=t2b/cybench-launcher.properties'
+    ]
+
+//    ### Config for JMH runner ###
+//    main = 'org.openjdk.jmh.Main'
+//    args = [
+//            '-f', '1', '-w', '5s', '-wi', '0', '-i', '1', '-r', '5s', '-t', '1', '-bm', 'Throughput'
+//    ]
 }
